--- a/main.css
+++ b/main.css
@@ -50,22 +50,30 @@ header nav ul {
           justify-content: space-between;
 }
 
+header nav ul li {
+  padding-top: 6px;
+  width: 120px;
+}
+
 header nav ul li:hover {
   background-color: #eeededd5;
-  height: 50px;
+  border-radius: 10px;
+  height: 40px;
 }
 
 header nav #tenda {
   visibility: hidden;
   position: relative;
+  border-radius: 10px;
   padding-top: 30px;
-  padding-right: 70px;
-  width: 30px;
+  width: 66%;
   background-color: #eeededd5;
 }
 
 header nav #tenda li {
-  padding: 10px;
+  width: 70px;
+  height: 30px;
+  text-align: center;
 }
 
 header h2 {
