--- a/main.css
+++ b/main.css
@@ -2,32 +2,21 @@
   font-family: "Quicksand-Regular";
   src: url(./police/Quicksand-Regular.otf);
 }
-
 body {
   background-color: rgba(0, 0, 0, 0.8);
   color: #eeededd5;
   opacity: 0.8;
-  font-family: "Quicksand-Regular", Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: "Quicksand-Regular", Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
 .flexbox {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .flexbox_row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  flex-direction: row;
 }
 
 header {
@@ -35,32 +24,25 @@ header {
   background-color: #eeededd5;
   color: black;
 }
-
 header nav {
   margin-left: 20%;
   margin-top: 50px;
   margin-right: 2%;
 }
-
 header nav ul {
   font-size: 20px;
   width: 350px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-
 header nav ul li {
   padding-top: 6px;
   width: 120px;
 }
-
 header nav ul li:hover {
   background-color: #eeededd5;
   border-radius: 10px;
   height: 40px;
 }
-
 header nav #tenda {
   visibility: hidden;
   position: relative;
@@ -69,13 +51,11 @@ header nav #tenda {
   width: 66%;
   background-color: #eeededd5;
 }
-
 header nav #tenda li {
   width: 70px;
   height: 30px;
   text-align: center;
 }
-
 header h2 {
   padding-left: 7px;
   padding-right: 7px;
@@ -87,36 +67,31 @@ header h2 {
   font-size: 20px;
   text-align: center;
 }
-
 header h1 {
   margin-left: 15px;
   width: 400px;
 }
 
 .song {
-  padding: 15px;
+  width: 40%;
+  margin-left: 50px;
+  margin-bottom: 3%;
 }
 
 #produzioni {
   width: 50%;
-  margin: 60px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
+  margin-top: 4%;
+  align-content: center;
   height: 450px;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
-
 #produzioni p {
   width: 80%;
 }
-
 #produzioni h2 {
   position: absolute;
   top: 15%;
+  left: 2%;
 }
 
 #articoli {
@@ -124,17 +99,14 @@ header h1 {
 }
 
 ul {
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   text-align: center;
   margin-top: -20px;
   margin-right: 19%;
 }
-
 ul li {
   list-style-type: none;
 }
-
 ul li a {
   text-decoration: none;
   color: #000000;
@@ -145,9 +117,9 @@ footer {
   background-color: #eeededd5;
   color: #000000;
 }
-
 footer h3 {
   text-align: center;
   padding-top: 10px;
 }
+
 /*# sourceMappingURL=main.css.map */
