--- a/main.scss
+++ b/main.scss
@@ -76,7 +76,7 @@ header
             color: $header_color;
             border-radius: 20px;
             font-size: 20px;
-            text-align: center;
+            text-align: center
         }
         & h1
         {
@@ -86,13 +86,14 @@ header
 }
 .song
 {
-    padding: 15px;
+    width: 40%;
+    margin-left: 50px;
+    margin-bottom: 3%;
 }
 #produzioni
 {
     width: 50%;
-    margin: 60px;
-    justify-content: center;
+    margin-top: 4%;
     align-content: center;
     height: 450px;
     flex-wrap: wrap;
@@ -104,6 +105,7 @@ header
     {
         position: absolute;
         top: 15%;
+        left: 2%;
     }
 }
 #articoli
