--- a/css/main.css
+++ b/css/main.css
@@ -11113,5 +11113,42 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+body {
+  color: rgba(255, 255, 255, 0.74);
+  text-shadow: 1px 1px 2px black;
+  background-color: #303834;
+}
+
+audio {
+  border-radius: 20px;
+  height: 40px;
+}
+
+audio:hover {
+  transform: scale(1.05);
+  filter: drop-shadow(2px 3px 3px #333);
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  color: rgba(245, 245, 245, 0.74);
+}
+
+img {
+  height: 600px;
+}
+
+li {
+  list-style-type: none;
+}
+
+iframe {
+  height: 800px;
+  width: 1200px;
+}
 
 /*# sourceMappingURL=main.css.map */
