--- a/css/main.css
+++ b/css/main.css
@@ -11151,4 +11151,16 @@ iframe {
   width: 1200px;
 }
 
+@media screen and (max-device-width: 780px) {
+  #video {
+    display: none;
+  }
+
+  #carouselIndicators img {
+    height: 250px;
+    object-fit: cover;
+    margin-top: 3.6em;
+  }
+}
+
 /*# sourceMappingURL=main.css.map */
